--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Vacinas">
+        android:theme="@style/Theme.Vacinas.NoActionBar">
         <activity
             android:name=".CadastroActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
+            android:name=".LoginActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivityUser"
             android:exported="true">
