--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Vacinas.NoActionBar">
         <activity
+            android:name=".EditarActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Vacinas.NoActionBar.NoActionBar">
+        </activity>
+        <activity
             android:name=".CadastroActivity"
             android:exported="false" />
         <activity
@@ -23,8 +28,7 @@
         </activity>
         <activity
             android:name=".MainActivityUser"
-            android:exported="true">
-        </activity>
+            android:exported="true"/>
 
         <meta-data
             android:name="preloaded_fonts"
